[gd_scene load_steps=4 format=3 uid="uid://bf3ab670oy0m8"]

[ext_resource type="Script" path="res://steam/SteamLobby.gd" id="1_0trix"]

[sub_resource type="Theme" id="Theme_ti0bt"]
Button/font_sizes/font_size = 32
Label/font_sizes/font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bt38q"]
bg_color = Color(0.364706, 0.290196, 0.32549, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ti0bt")
script = ExtResource("1_0trix")

[node name="CreateLobby" type="Button" parent="."]
layout_mode = 0
offset_right = 359.0
offset_bottom = 85.0
text = "Create Lobby"

[node name="Label2" type="Label" parent="CreateLobby"]
layout_mode = 0
offset_left = 377.0
offset_top = -2.0
offset_right = 581.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 32
text = "Lobby Name:"

[node name="LobbySetName" type="LineEdit" parent="CreateLobby"]
layout_mode = 0
offset_left = 378.0
offset_top = 46.0
offset_right = 672.0
offset_bottom = 82.0
placeholder_text = "Lobby Name Here"

[node name="JoinLobby" type="Button" parent="."]
layout_mode = 0
offset_top = 98.0
offset_right = 361.0
offset_bottom = 183.0
text = "Join Lobby"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 1524.0
offset_top = 111.0
offset_right = 1897.0
offset_bottom = 189.0
text = "Start Game"

[node name="LeaveLobby" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 935.0
offset_right = 365.0
offset_bottom = 1017.0
text = "Leave Lobby"

[node name="SteamName" type="Label" parent="."]
layout_mode = 0
offset_left = 1525.0
offset_top = 23.0
offset_right = 1895.0
offset_bottom = 90.0
text = "Steam Name"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Players" type="Panel" parent="."]
layout_mode = 0
offset_top = 203.0
offset_right = 363.0
offset_bottom = 869.0

[node name="PlayerCount" type="Label" parent="Players"]
layout_mode = 0
offset_left = 106.0
offset_right = 265.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 32
text = "Players (0)"

[node name="PlayerList" type="RichTextLabel" parent="Players"]
layout_mode = 0
offset_left = 23.0
offset_top = 53.0
offset_right = 347.0
offset_bottom = 642.0

[node name="Chat" type="Panel" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 203.0
offset_right = 1896.0
offset_bottom = 869.0

[node name="ChatName" type="Label" parent="Chat"]
layout_mode = 0
offset_left = 58.0
offset_right = 217.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 32
text = "Lobby Name"

[node name="ChatOutput" type="RichTextLabel" parent="Chat"]
layout_mode = 0
offset_left = 8.0
offset_top = 47.0
offset_right = 1487.0
offset_bottom = 655.0

[node name="SendMessage" type="Button" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 910.0
offset_right = 602.0
offset_bottom = 950.0
theme_override_font_sizes/font_size = 16
text = "Send Message"

[node name="LineEdit" type="LineEdit" parent="SendMessage"]
layout_mode = 0
offset_left = 199.0
offset_top = 2.0
offset_right = 1012.0
offset_bottom = 38.0
placeholder_text = "Your Message Here"

[node name="LobbyPopup" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 489.0
offset_top = 127.0
offset_right = 1449.0
offset_bottom = 805.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bt38q")

[node name="Scroll" type="ScrollContainer" parent="LobbyPopup"]
layout_mode = 0
offset_left = 32.0
offset_top = 52.0
offset_right = 1071.0
offset_bottom = 608.0
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="LobbyPopup/Scroll"]
layout_mode = 2

[node name="ClosePopup" type="Button" parent="LobbyPopup"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -63.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Close"

[node name="Label" type="Label" parent="LobbyPopup"]
layout_mode = 0
offset_top = 2.0
offset_right = 1000.0
offset_bottom = 722.0
theme_override_font_sizes/font_size = 32
text = "Lobby List"

[connection signal="pressed" from="CreateLobby" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="JoinLobby" to="." method="_on_join_lobby_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="LeaveLobby" to="." method="_on_leave_lobby_pressed"]
[connection signal="pressed" from="SendMessage" to="." method="_on_send_message_pressed"]
[connection signal="pressed" from="LobbyPopup/ClosePopup" to="." method="_on_close_popup_pressed"]
